Added new stamped motor state messages and altered driver to publish them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,8 @@ add_message_files(
    MotorCommand.msg
    MotorState.msg
    MotorStateList.msg
+   MotorStateStamped.msg
+   MotorStateStampedList.msg
  )
 
 ## Generate services in the 'srv' folder
